deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: game-2048-prod
  labels:
    app: game-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
       containers:
         - name: game-2048
           image: cnrock/2048:latest
           ports:
             - containerPort: 80

           livenessProbe:
             httpGet:
               path: /
               port: 80
             initialDelaySeconds: 15
             periodSeconds: 10

           readinessProbe:
             httpGet:
               path: /
               port: 80
             initialDelaySeconds: 5
             periodSeconds: 5

           resources:
             requests:
               cpu: "100m"
               memory: "128Mi"
             limits:
               cpu: "250m"
               memory: "256Mi"
